--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <button type="submit" class="btn btn-primary" id="submit">Submit</button>
         </form>
 
-        <table class="table table-striped">
+        <table class="table table-striped table-dark">
             <thead>
                 <tr>
                     <th>First Name</th>
